# agatedb

./: .gitignore  Cargo.toml  Makefile  README.md  codecov.yml
.github/: codecov.yml
.github/workflows/: bench.yml  build.yml  review-stats.yml  sanitizer.yml  stats.yml  test.yml  tsan
agate_bench/: Cargo.toml
agate_bench/src/: main.rs
benches/: bench.rs  bench_common.rs  bench_iterator.rs  bench_manifest.rs  bench_table.rs  benches_agate_rocks.rs  benches_badger_rocks.rs  common.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
dev/bench/: data.js  index.html
proto/: Cargo.toml  build.rs
proto/src/: lib.rs  meta.rs
proto/src/proto/: meta.proto
scripts/: gen.cmd
skiplist/: Cargo.toml
skiplist/benches/: bench.rs
skiplist/src/: arena.rs  key.rs  lib.rs  list.rs
skiplist/tests/: tests.rs
src/: batch.rs  bloom.rs  checksum.rs  closer.rs  db.rs  discard.rs  entry.rs  error.rs  format.rs  ingest.rs  iterator.rs  iterator_trait.rs  levels.rs  lib.rs  log.rs  managed_db.rs  manifest.rs  memtable.rs  ops.rs  opt.rs  structs.rs  table.rs  txn.rs  util.rs  value.rs  value_log.rs  wal.rs  watermark.rs
src/cache/: lru.rs  mod.rs  shard.rs  utils.rs
src/db/: opt.rs  tests.rs
src/levels/: compaction.rs  handler.rs  leveltree.rs  table.rs  tests.rs
src/ops/: oracle.rs  snapshot.rs  transaction.rs  transaction_test.rs
src/table/: btree_table_accessor.rs  builder.rs  concat_iterator.rs  iterator.rs  merge_iterator.rs  table_accessor.rs  tests.rs  vec_table_acessor.rs
src/txn/: watermark.rs
src/util/: binary.rs  btree.rs  leveltree.rs  mod.rs
table/: Cargo.toml
table/src/: builder.rs  checksum.rs  lib.rs
