[package]
name = "agatedb"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
bytes = "0.5"
crc = "1.8"
rand = "0.7"
proto = { path = "proto" }
skiplist = { path = "skiplist" }
memmap = "0.7"
farmhash = "1.1"
prost = "0.6"
enum_dispatch = "0.3"
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.4.0"

[workspace]
members = [
    "proto",
    "skiplist",
]

[[bench]]
name = "bench_common"
harness = false

[[bench]]
name = "bench_table"
harness = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
