[package]
name = "agatedb"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.1.0"
coarsetime = "0.1.22"
crc = "3.0.0"
crc32fast = "1.3.2"
crossbeam-channel = "0.5.5"
enum_dispatch = "0.3.8"
farmhash = "1.1.5"
getset = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.17"
memmap2 = "0.5.4"
parking_lot = "0.12.1"
prost = "0.10.4"
proto = { path = "proto" }
rand = "0.8.5"
skiplist = { path = "skiplist" }
tempdir = "0.3.7"
thiserror = "1.0.31"
yatp = { git = "https://github.com/tikv/yatp.git" }

[dev-dependencies]
criterion = "0.3.5"
tempfile = "3.3.0"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.5.0"

[workspace]
members = ["agate_bench", "proto", "skiplist"]

[[bench]]
name = "bench_common"
harness = false

[[bench]]
name = "bench_table"
harness = false

[[bench]]
name = "bench_iterator"
harness = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
