[package]
name = "agatedb"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
edition = "2018"

[features]
default = []
enable-rocksdb = ["rocksdb"]

[dependencies]
bytes = "1.0"
coarsetime = "0.1.22"
crc = "1.8"
crc32fast = "1.2"
crossbeam-channel = "0.5"
enum_dispatch = "0.3"
farmhash = "1.1"
getset = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.17"
memmap2 = "0.3"
parking_lot = "0.11"
prost = "0.8"
proto = { path = "proto" }
rand = "0.7"
rocksdb = { version = "0.15", optional = true }
skiplist = { path = "skiplist" }
tempdir = "0.3"
thiserror = "1.0"
yatp = { git = "https://github.com/tikv/yatp.git" }

[dev-dependencies]
criterion = "0.3"
tempfile = "3"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.4.0"

[workspace]
members = [
    "agate_bench",
    "proto",
    "skiplist"
]

[[bench]]
name = "bench_common"
harness = false

[[bench]]
name = "bench_table"
harness = false

[[bench]]
name = "bench_iterator"
harness = false

[[bench]]
name = "benches_badger_rocks"
harness = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
