[package]
name = "agate_bench"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

[features]
default = []
enable-rocksdb = ["rocksdb"]

[dependencies]
agatedb = { path = "../" }
bytes = "1.0"
clap = "2.33"
indicatif = "0.15"
rand = "0.7"
rocksdb = { version = "0.15", optional = true }
threadpool = "1.8"
yatp = { git = "https://github.com/tikv/yatp.git" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.0"
