[package]
name = "agate_bench"
version = "0.1.0"
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"

[features]
default = []
enable-rocksdb = ["rocksdb"]

[dependencies]
agatedb = { path = "../" }
bytes = "1.1.0"
clap = "3.2.8"
indicatif = "0.16.2"
rand = "0.8.5"
rocksdb = { version = "0.18.0", optional = true }
threadpool = "1.8.1"
yatp = { git = "https://github.com/tikv/yatp.git" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.0"
