[package]
name = "skiplist"
version = "0.1.0"
authors = ["Jay Lee <busyjaylee@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
bytes = "1.0"

[dev-dependencies]
yatp = { git = "https://github.com/tikv/yatp.git" }
criterion = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.4.0"

[[bench]]
name = "bench"
harness = false
